--- a/Wordhunt-Solver/index.html
+++ b/Wordhunt-Solver/index.html
@@ -21,6 +21,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="bundle.jsx"></script>
   </body>
 </html>
 
